src/content/docs/ja/sdk/android/v4/features/deep-linking.mdx
---
title: "ディープリンクの設定"
description: "ディープリンクを使用するには、SDKを設定します。"
slug: "en/sdk/android/v4/features/deep-links"
versions: 
    - 
        label: "v5"
        value: "v5"
        default: true
    - 
        label: "v4"
        value: "v4"
redirects: 
    v5: "/en/sdk/android/features/deep-links"
---
ディープリンクを作成して、ユーザーをアプリ内の特定の場所に誘導します。Adjust SDKは、ユーザーがデバイスにアプリをインストール済みかどうかによって、異なるロジックを使用します。

* ダイレクトディープリンクは、ユーザーがアプリをすでにデバイスにインストールしている場合に使用されます。そのリンクは、リンクで指定されたページにユーザーをリダイレクトします。
* ディファードディープリンクは、ユーザーがアプリをデバイスにインストールしていない場合に使用されます。そのリンクは、ユーザーをアプリストアに送り、アプリを先にインストールしてもらいます。ユーザーがアプリをインストールすると、リンクで指定されたページが開きます。

SDKは、ユーザーがリンクからアプリを起動した後にディープリンクの情報を読み取ることができます。

スキーム名を設定する \{\#configure\-your\-scheme\-name\}
----------------------------------------------------

ユーザーがアプリをインストールしている場合、ユーザーがディープリンク情報を含むリンクをクリックするとアプリが起動します。Adjust SDKには、ディープリンク情報を解析してアプリ全体で利用するためのツールが備わっています。ディープリンクを設定するには、一意の **スキーム名** を選択する必要があります。
<callout type="important"> 

[Android アプリリンクを使用してディープリンクを設定する](#configure-android-app-links)場合でも、スキーム名の設定が必要です。これは、Push通知やYouTube、Xなどの特定の環境で自動ルーティングにアプリスキーム（`appName://`）が使用されるためです。Android アプリリンクが特定の環境からアプリを開けない場合、アプリスキームがルーティングロジックのフォールバックとして機能します。
</Callout> 

ユーザーがディープリンクをクリックしたときに、特定のアクティビティを起動できます。これを行うには、以下の手順に従ってください。

1. `AndroidManifest.xml`ファイルでアクティビティに **スキーム名** を割り当てます。
2. アクティビティ定義欄に`intent-filter`ノードを追加します。
3. `intent-filter`ノード内に、 **スキーマ名** を含む`android:scheme`データノードを追加します。

### 例 \{\#example\}

この例は、`MainActivity`というアクティビティを **スキーム名** `adjustExample`で開くように設定する方法を示します。
<codeblock title="AndroidManifest.xml" highlight=".MainActivity, adjustExample"> 

```xml
<activity    android:name=".MainActivity"    android:configChanges="orientation|keyboardHidden"    android:label="@string/app_name"    android:screenOrientation="portrait" id="sl-md0000000">

   <intent-filter id="sl-md0000000">
      <action android:name="android.intent.action.MAIN" id="sl-md0000000" />
      <category android:name="android.intent.category.LAUNCHER" id="sl-md0000000" />
   </intent-filter>

   <intent-filter id="sl-md0000000">
      <action android:name="android.intent.action.VIEW" id="sl-md0000000" />
      <category android:name="android.intent.category.DEFAULT" id="sl-md0000000" />
      <category android:name="android.intent.category.BROWSABLE" id="sl-md0000000" />
      <data android:scheme="adjustExample" id="sl-md0000000" />
   </intent-filter>

   <intent-filter android:autoVerify="true" id="sl-md0000000">
    <action android:name="android.intent.action.VIEW" id="sl-md0000000" />
    <category android:name="android.intent.category.DEFAULT" id="sl-md0000000" />
    <category android:name="android.intent.category.BROWSABLE" id="sl-md0000000" />
    <data android:scheme="http" android:host="insights.go.link" id="sl-md0000000" />
    <data android:scheme="https" android:host="insights.go.link" id="sl-md0000000" />
   </intent-filter>

</activity>
```

</CodeBlock> 

これでアプリでURIスキームを処理できるようになります。ユーザーが **スキーム名** を含む`deep_link`パラメーターを持つリンクをクリックすると、アクティビティが起動します。
<codeblock highlight="deep_link=adjustExample%3A%2F%2F"> 

```html
https://app.adjust.com/abc123?deep_link=adjustExample%3A%2F%2F
```

</CodeBlock> 

Android アプリリンクを設定する \{\#configure\-android\-app\-links\}
--------------------------------------------------------------

Android アプリリンクを使用してディープリンクを設定する場合でも、[スキーム名の設定](#configure-your-scheme-name)を必ず行ってください。

[Android アプリリンク](https://help.adjust.com/en/article/set-up-android-app-links)には、 `AndroidManifest.xml`ファイルに`intent`フィルターを追加して、アプリが処理できるURLを指定します。`intent`フィルターに、 `data`要素を`android:autoVerify="true"`アトリビュートとともに含めます。

       <intent-filter android:autoVerify="true" id="sl-md0000000">
        <action android:name="android.intent.action.VIEW" id="sl-md0000000" />
        <category android:name="android.intent.category.DEFAULT" id="sl-md0000000" />
        <category android:name="android.intent.category.BROWSABLE" id="sl-md0000000" />
        <data android:scheme="http" android:host="insights.go.link" id="sl-md0000000" />
        <data android:scheme="https" android:host="insights.go.link" id="sl-md0000000" />
       </intent-filter>

<callout type="info"> 

`insights.go.link` は、Android アプリリンクとして定義されたブランドドメインです。
</Callout> 

これで、アプリでAndroid アプリリンクを処理できるようになります。`insights.go.link`ドメインを含むリンクをユーザーがクリックすると、アプリが自動的に開きます。

```html
https://insights.go.link/login?adj_t=abc123
```

ディープリンク情報にアクセスする \{\#access\-deep\-link\-information\}
------------------------------------------------------------

`deep_link`パラメーターコンテンツの配信場所を指定できます。これを行うには、`AndroidManifest.xml`ファイルでアクティビティに`android:launchMode`プロパティを設定してください。
<callout type="seealso"> 

詳細は、[`android:launchMode` ドキュメント](https://developer.android.com/guide/topics/manifest/activity-element.html)を参照してください。
</Callout> 

Adjust SDKは、`onCreate`または`onNewIntent`メソッドを使ってアクティビティ内のintentオブジェクトにディープリンク情報を送信します。アプリが起動し、これらのメソッドのいずれかが起動すれば、ディープリンクコンテンツにアクセスできます。その後、アプリの他の部分でこの情報をアクセスできます。

`onCreate`または`onNewIntent`メソッド内で`getData()`メソッドを呼び出すことで、ディープリンク情報を抽出できます。
<tabs> <tab title="Kotlin" sync="kotlin"> 

```kotlin
override fun onCreate(savedInstanceState: Bundle?) {
   super.onCreate(savedInstanceState)
   setContentView(R.layout.activity_main)

   val intent = intent
   val data = intent.data
   // data.toString() -> This is your deep_link parameter value.
}
```

</Tab> <tab title="Java" sync="java"> 

```java
@Override
protected void onCreate(Bundle savedInstanceState) {
   super.onCreate(savedInstanceState);
   setContentView(R.layout.activity_main);

   Intent intent = getIntent();
   Uri data = intent.getData();
   // data.toString() -> This is your deep_link parameter value.
}
```

</Tab> </Tabs> <tabs> <tab title="Kotlin" sync="kotlin"> 

```kotlin
override fun onNewIntent(intent: Intent?) {
   super.onNewIntent(intent)
   val data = intent?.data
   // data.toString() -> This is your deep_link parameter value.
}
```

</Tab> <tab title="Java" sync="java"> 

```java
@Override
protected void onNewIntent(Intent intent) {
   super.onNewIntent(intent);

   Uri data = intent.getData();
   // data.toString() -> This is your deep_link parameter value.
}
```

</Tab> </Tabs> 

ディファードディープリンク \{\#deferred\-deep\-linking\}
------------------------------------------------

Adjust SDKは、デフォルトでディファードディープリンクを開きます。追加の設定は必要ありません。この動作を無効化するには、`setOnDeeplinkResponseListener`メソッドを使用して、ディファード ディープリンク コールバックを設定する必要があります。

### ディファードディープリンクのコールバックを設定する \{\#set\-up\-a\-deferred\-deep\-link\-callback\}

<codeblock title="メソッドシグネチャー"> 

```java
public void setOnDeeplinkResponseListener(OnDeeplinkResponseListener onDeeplinkResponseListener)
```

</CodeBlock> 

Adjust SDKがディファードディープリンクを受け取った際に、デリゲート関数を呼び出すように設定することができます。このデリゲート関数は、ディープリンクを`String`引数で受け取ります。

ディープリンクを開く場合は、デリゲート関数で`true`を返してください。ファイルを開かない場合は、 `false`を返します。
<tabs> <tab title="Kotlin" sync="kotlin"> 

```kotlin
val config = AdjustConfig(this, appToken, environment)
//...
config.setOnDeeplinkResponseListener { deeplink ->
   Log.d("example", "Deferred deep link callback called!")
   Log.d("example", "Deep link URL: $deeplink")
   true
}
//...
Adjust.onCreate(config)
```

</Tab> <tab title="Java" sync="java"> 

```java
AdjustConfig config = new AdjustConfig(this, appToken, environment);
//...
// Evaluate the deeplink to be launched.
config.setOnDeeplinkResponseListener(new OnDeeplinkResponseListener() {
   @Override
   public boolean launchReceivedDeeplink(Uri deeplink) {
      Log.d("example", "Deferred deep link callback called!");
      Log.d("example", "Deep link URL: " + deeplink);

      return true;
   }
});
//...
Adjust.onCreate(config);
```

</Tab> <tab title="Javascript" sync="js"> 

```js
function deferredDeeplinkCallback(deeplink) {
   console.log("Deferred deep link callback called!");
   console.log(`Deep link URL: ${deeplink}`);
}
//...
let adjustConfig = new AdjustConfig(yourAppToken, environment);
adjustConfig.setOpenDeferredDeeplink(true);
adjustConfig.setDeferredDeeplinkCallback(deferredDeeplinkCallback);
//...
Adjust.start(adjustConfig);
```

</Tab> </Tabs> 

### 例 \{\#example\-1\}

この例では、コールバック関数で `false`値を返すことで、SDKがアクティビティを起動しないようにする方法を示しています。
<tabs> <tab title="Kotlin" sync="kotlin"> 

```kotlin
config.setOnDeeplinkResponseListener { deeplink ->
   false
}
```

</Tab> <tab title="Java" sync="java"> 

```java
config.setOnDeeplinkResponseListener(new OnDeeplinkResponseListener() {
   @Override
   public boolean launchReceivedDeeplink(Uri deeplink) {
      return false;
   }
});
```

</Tab> </Tabs> 

ディープリンクによるリアトリビューション \{\#reattribution\-via\-deep\-links\}
----------------------------------------------------------------

<codeblock title="メソッドシグネチャー"> 

```java
public static void appWillOpenUrl(Uri url, Context context)
```

</CodeBlock> 

Adjustはディープリンクを使ったリエンゲージメントキャンペーンをサポートしています。詳細は、[Campaign Labのディープリンク](https://help.adjust.com/en/article/deep-links)をご覧ください。

ユーザーをリアトリビュートするには、アプリがディープリンクコンテンツを受け取る時に`appWillOpenUrl`メソッドを呼び出す必要があります。Adjust SDKは次に、ディープリンク内の新しいアトリビューションデータを検索します。SDKが新しい情報を見つけた場合、その情報をAdjustのサーバーに転送し、リアトリビューションを行います。
<tabs> <tab title="Kotlin" sync="kotlin"> 

```kotlin
override fun onCreate(savedInstanceState: Bundle?) {
   super.onCreate(savedInstanceState)
   setContentView(R.layout.activity_main)

   val intent = intent
   val data = intent.data
   Adjust.appWillOpenUrl(data, getApplicationContext())
}
```

</Tab> <tab title="Java" sync="java"> 

```java
@Override
protected void onCreate(Bundle savedInstanceState) {
    super.onCreate(savedInstanceState);
    setContentView(R.layout.activity_main);

    Intent intent = getIntent();
    Uri data = intent.getData();
    Adjust.appWillOpenUrl(data, getApplicationContext());
}
```

</Tab> <tab title="Javascript" sync="js"> 

```js
Adjust.appWillOpenUrl(deeplinkUrl);
```

</Tab> </Tabs> 

リンクのresolution（解析と変換） \{\#link\-resolution\}
------------------------------------------------

<codeblock title="メソッドシグネチャー"> 

```java
public static void resolveLink(final String url,
                               final String[] resolveUrlSuffixArray,
                               final AdjustLinkResolutionCallback adjustLinkResolutionCallback)

```

</CodeBlock> 

一部のEメールサービスプロバイダー（ESP）は、マーケティングキャンペーンに独自のカスタムドメインを使用しています。カスタムドメインでクリックを計測する場合は、SDKを設定してリンクを解析する必要があります。これを行うには、 `AdjustLinkResolution`クラスの`resolveLink`メソッドを呼び出します。Adjust SDKはカスタムリンクをたどって、ディープリンクを開いた時にそれを解析します。これにより、Eメール計測キャンペーンとのやり取りを記録することが可能です。

`resolveLinkWithUrl`メソッドは以下の引数を受け取ります：

* `url` （`String`）：アプリを起動したディープリンク
* `resolveUrlSuffixArray` （`String[]`）：解析する必要がある設定済みキャンペーンのカスタムドメイン。
* `adjustLinkResolutionCallback` （`AdjustLinkResolutionCallback`）：最終URLを返すコールバック

このメソッドは、`resolveUrlSuffixArray`内のドメインに対してディープリンクを確認します。一致するものが見つからない場合、ディープリンクURLをそのまま転送します。一致するものが見つかった場合、リンクの解析を試み、結果のディープリンクを返します。その後、これをコールバックパラメーターに保管します。
<callout type="note"> 

URLの解析を試みると、Adjust SDKは最大10のリダイレクトをフォローアップします。さらに、SDKはフォローした最新のURLをコールバックURLとして返します。リダイレクトが10以上ある場合、SDKは **10番目** のリダイレクトURLを返します。
</Callout> 

その後、返されたディープリンクを使用してユーザーをリアトリビュートできます。これを行うには、ディープリンクを`Adjust.appWillOpenUrl`メソッドにパスします。
<tabs> <tab title="Kotlin" sync="kotlin"> 

```kotlin
AdjustLinkResolution.resolveLink(url, arrayOf("example.com"), object : AdjustLinkResolution.AdjustLinkResolutionCallback {
   override fun resolvedLinkCallback(resolvedLink: Uri) {
         Adjust.appWillOpenUrl(resolvedLink, applicationContext)
   }
})
```

</Tab> <tab title="Java" sync="java"> 

```java
AdjustLinkResolution.resolveLink(url, new String[]{"example.com"}, new AdjustLinkResolution.AdjustLinkResolutionCallback() {
   @Override
   public void resolvedLinkCallback(Uri resolvedLink) {
      Adjust.appWillOpenUrl(resolvedLink, getApplicationContext());
   }
});
```

</Tab> </Tabs>

